bug: fix contact form alignment

--- a/style.css
+++ b/style.css
@@ -268,8 +268,8 @@ hgroup p::before {
 }
 
 .contact-form {
-    margin: 0 auto 0 auto;
-    max-width: 500px;
+    align-self: center;
+    width: 50%;
 
     display: flex;
     flex-direction: column;
